compiler/tests/fixtures/invalid/semantics/incompatible_role_labels.viv
// Invalid: role has incompatible labels (character + item)

action bad-labels:
    roles:
        @actor:
            as: initiator
        @thing:
            as: character, item
